# TinyVLLM

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-03-tinyvllm-jepa-design.md
examples/: multihead_attention_from_scratch.py
tests/: test_attention_scratch.py  test_clip.py  test_datasets.py  test_loss.py  test_train_step.py  test_views.py  test_vit.py
tinyvllm/: __init__.py  checkpoint_io.py  config.py  train.py  train_clip.py
tinyvllm/data/: char_tokenizer.py  factory.py  labels.py  tiny_imagenet.py
tinyvllm/inference/: encode.py  match_text.py  probe.py
tinyvllm/jepa/: __init__.py  loss.py  views.py
tinyvllm/models/: __init__.py  base.py  encoder.py  factory.py  predictor.py  text_encoder.py  vit_encoder.py
