[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyvllm"
version = "0.1.0"
description = "Educational image JEPA for learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyvllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
